<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:layout_margin="10dp"
    android:background="@color/white"
   >

    <TextView
        android:id="@+id/issueTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/title_padrao"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/status_padrao"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:layout_below="@id/issueTitle" />

    <TextView
        android:id="@+id/statusIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/status_issue_padrao"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:layout_below="@id/issueTitle"
        android:layout_toEndOf="@id/status"
        android:layout_toRightOf="@id/status" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:layout_below="@id/status"/>

</RelativeLayout>