<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".main.view.IssueDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/gitBannerDetailIssue"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            android:src="@drawable/github"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/issueTitleDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/titulo_do_issue"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gitBannerDetailIssue" />

        <ScrollView
            android:id="@+id/bodyContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/issueTitleDetail" >

            <TextView
                android:id="@+id/issueBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </ScrollView>

        <TextView
            android:id="@+id/createdAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/data_padrao"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="@id/linkBtn"
            app:layout_constraintTop_toBottomOf="@id/linkBtn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/linkBtn"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:textAllCaps="false"
            android:text="@string/open_on_broswer"
            android:padding="10dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bodyContainer"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatarUser"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/linkBtn"
            android:src="@mipmap/ic_launcher"
            android:layout_marginRight="25dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>